# rules_lean

./: .gitignore  CHANGELOG.md  MODULE.bazel  README.md
.github/workflows/: ci.yml
docs/: BUILD.bazel
examples/batteries_smoke/: BUILD.bazel
examples/regen_smoke/: BUILD.bazel  EchoFixture.lean
lean/: BUILD.bazel  lake.bzl  lean.bzl
lean/lib/: RulesLean.lean  lakefile.lean
lean/lib/RulesLean/: Internal.lean  Lake.lean  Olean.lean  Workspace.lean
lean/private/: BUILD.bazel  known_lean_versions.bzl
